# mtracker

./: CMakeLists.txt  README.md  package.xml
config/: diff_drive_controller.yaml  gazebo_ros_control_params.yaml
doc/: readme.txt
include/mtracker/: Robot.hpp  Serial.hpp  mtracker.h
launch/: gazebo.launch  gmapping.launch  hector.launch  laser_scan_matcher.launch  main.launch  rviz.launch  simulation.launch  spawn.launch  world1.launch  world2.launch  world3.launch
launch/archive/: mtracker_master.launch
rviz/: mtracker.rviz
scripts/: rsg_trajectory_tracking.py
src/: controller.cpp  frames.gv  gmapping_pose.cpp  mtracker.cpp  mtracker_sim.cpp  real_robot.cpp  rsg.cpp  simulation.cpp  simulator.cpp
urdf/: m2wr.gazebo  m2wr.xacro  macro.xacro  materials.xacro  mtracker.gazebo  mtracker.xacro
