<?xml version="1.0"?>
<package>
  <name>mtracker</name>
  <version>0.0.0</version>
  <description>The MTracker driver package</description>

  <maintainer email="inz.mateusz.przybyla@gmail.com">MP</maintainer>
  <license>BSD</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
